--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -4,31 +4,13 @@ body {
 }
 
 body {
-	font-family: 'Cormorant medium';
-	font-weight: 500;
-	font-size: 16px;
-	font-style: normal;
-	line-height: 140%;
-	color: $textBlack;
-}
-
-.wrapper {
-	min-height: 100%;
-	position: relative;
-	overflow-x: hidden;	// Чтобы не было горизонтального скролла на мобилках из-за менюшек
-}
-
-.main {
-	flex: 1 0 auto;
-}
-
-// Подвал прижат к низу страницы
-.footer {
-	flex: 0 0 auto;
+	font-family: Roboto, sans-serif;
+	height: 100vh;
 }
 
 .container{
-	max-width: 1310px; // Контейнер по макету 1280 px, но плюс padding слева и справа по 15 = ширина макета 1310 (1280 + 30 = 1310)
-	margin: 0 auto;
-	padding: 0 15px;
+	position: relative;
+  	overflow: hidden;
+  	width: 100vw;
+  	height: 100vh;
 }
